[package]
name = "repo-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
http = "1"
httpdate = "1"
git2 = "0.20"
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "user-hooks"] }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
